--- a/torch_trainer.ipynb
+++ b/torch_trainer.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "c:\\Users\\lhuang37\\.conda\\envs\\ocp-models\\lib\\site-packages\\tqdm\\auto.py:22: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
       "  from .autonotebook import tqdm as notebook_tqdm\n",
       "ERROR:root:Invalid setup for SCN. Either the e3nn library or Jd.pt is missing.\n"
      ]
@@ -42,27 +42,29 @@
    "outputs": [],
    "source": [
     "#Save the model hyperparameters to a YAML file\n",
-    "model_hparams ={\"num_atoms\":0,\n",
-    "                \"bond_feat_dim\":0,\n",
-    "                \"num_targets\":0,\n",
-    "                \"num_heads\":4,\n",
-    "                \"batch_size\":6\n",
-    "                }\n",
+    "# model_hparams ={\"num_atoms\":0,\n",
+    "#                 \"bond_feat_dim\":0,\n",
+    "#                 \"num_targets\":0,\n",
+    "#                 \"num_heads\":4,\n",
+    "#                 \"batch_size\":4\n",
+    "#                 }\n",
     "\n",
-    "with open('params/model_hparams.yml', 'w') as file:\n",
-    "    yaml.dump(model_hparams, file)"
+    "# with open('params/model_hparams.yml', 'w') as file:\n",
+    "#     yaml.dump(model_hparams, file)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Unrecognized arguments: ['num_heads', 'emb_size_in', 'emb_size_trans', 'out_layer1', 'out_layer2', 'batch_size']\n"
+      "WARNING:root:Unrecognized arguments: ['num_heads', 'emb_size_in', 'emb_size_trans', 'out_layer1', 'out_layer2', 'batch_size']\n",
+      "/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/init.py:405: UserWarning: Initializing zero-element tensors is a no-op\n",
+      "  warnings.warn(\"Initializing zero-element tensors is a no-op\")\n"
      ]
     }
    ],
@@ -88,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -162,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -171,15 +173,23 @@
     "\n",
     "# Split the dataset into train and validation\n",
     "train_dataset, val_dataset =random_split(dataset, [train_length, val_length])\n",
-    "train_loader = geom_loader.DataLoader(train_dataset, batch_size=6,drop_last=True)\n",
-    "val_loader = geom_loader.DataLoader(val_dataset, batch_size=6,drop_last=True)"
+    "train_loader = geom_loader.DataLoader(train_dataset, batch_size=4,drop_last=True)\n",
+    "val_loader = geom_loader.DataLoader(val_dataset, batch_size=4,drop_last=True)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([388])\n"
+     ]
+    }
+   ],
    "source": [
     "data = next(iter(train_loader))\n",
     "batched_data = data.batch\n",
@@ -188,7 +198,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -221,6 +231,7 @@
     "    iteration = 0\n",
     "\n",
     "    for images in tqdm(data_loader):\n",
+    "        model=model.to(device)\n",
     "        images = images.to(device)\n",
     "        optimizer.zero_grad()\n",
     "        predictions = model(images)\n",
@@ -240,18 +251,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def eval_fn(data_loader,model):\n",
+    "def eval_fn(data_loader,model,device):\n",
     "    model.eval()\n",
     "    total_loss=0.0\n",
     "    total_acc=0    \n",
     "    with torch.no_grad():\n",
     "        for images in tqdm(data_loader):\n",
-    "            model=model.to(DEVICE) \n",
-    "            images=images.to(DEVICE)                      \n",
+    "            model=model.to(device) \n",
+    "            images=images.to(device)                      \n",
     "            loss,acc=model(images)\n",
     "            total_loss+=loss.item()\n",
     "            total_acc+=acc.item()\n",
@@ -261,9 +272,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/2019 [00:00<?, ?it/s]"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "44\n",
+      "\n",
+      "4\n",
+      "4\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "  0%|          | 0/2019 [00:05<?, ?it/s]\n"
+     ]
+    },
+    {
+     "ename": "RuntimeError",
+     "evalue": "Caught RuntimeError in replica 1 on device 1.\nOriginal Traceback (most recent call last):\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py\", line 64, in _worker\n    output = module(*input, **kwargs)\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py\", line 1194, in _call_impl\n    return forward_call(*input, **kwargs)\n  File \"/shareddata/gem_transformer/Shell_repo/Models/EGformer.py\", line 376, in forward\n    ) = self.get_bases(\n  File \"/shareddata/ocp/open-catalyst/ocp/ocpmodels/models/gemnet_oc/gemnet_oc.py\", line 1106, in get_bases\n    basis_rad_main_raw = self.radial_basis(main_graph[\"distance\"])\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py\", line 1194, in _call_impl\n    return forward_call(*input, **kwargs)\n  File \"/shareddata/ocp/open-catalyst/ocp/ocpmodels/models/gemnet_oc/layers/radial_basis.py\", line 231, in forward\n    res = env[:, None] * self.rbf(d_scaled)\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py\", line 1194, in _call_impl\n    return forward_call(*input, **kwargs)\n  File \"/shareddata/ocp/open-catalyst/ocp/ocpmodels/models/gemnet_oc/layers/radial_basis.py\", line 76, in forward\n    dist = dist[:, None] - self.offset[None, :]\nRuntimeError: Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cuda:1!\n",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[13], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m best_valid_loss\u001b[38;5;241m=\u001b[39mnp\u001b[38;5;241m.\u001b[39mInf\n\u001b[1;32m      2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m epoch \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(num_epochs):\n\u001b[0;32m----> 3\u001b[0m     train_loss\u001b[38;5;241m=\u001b[39m\u001b[43mtrain_fn\u001b[49m\u001b[43m(\u001b[49m\u001b[43mtrain_loader\u001b[49m\u001b[43m,\u001b[49m\u001b[43mmodel\u001b[49m\u001b[43m,\u001b[49m\u001b[43moptimizer\u001b[49m\u001b[43m,\u001b[49m\u001b[43mdevice\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[43mDEVICE\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m      4\u001b[0m     valid_loss,acc\u001b[38;5;241m=\u001b[39meval_fn(val_loader,model,device\u001b[38;5;241m=\u001b[39mDEVICE)\n\u001b[1;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m epoch\u001b[38;5;241m<\u001b[39mwarmup_epochs:\n",
+      "Cell \u001b[0;32mIn[11], line 10\u001b[0m, in \u001b[0;36mtrain_fn\u001b[0;34m(data_loader, model, optimizer, device, optimize_after)\u001b[0m\n\u001b[1;32m      8\u001b[0m images \u001b[38;5;241m=\u001b[39m images\u001b[38;5;241m.\u001b[39mto(device)\n\u001b[1;32m      9\u001b[0m optimizer\u001b[38;5;241m.\u001b[39mzero_grad()\n\u001b[0;32m---> 10\u001b[0m predictions \u001b[38;5;241m=\u001b[39m \u001b[43mmodel\u001b[49m\u001b[43m(\u001b[49m\u001b[43mimages\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     11\u001b[0m targets \u001b[38;5;241m=\u001b[39m images\u001b[38;5;241m.\u001b[39my\n\u001b[1;32m     12\u001b[0m loss, acc \u001b[38;5;241m=\u001b[39m get_loss(predictions, targets)\n",
+      "File \u001b[0;32m~/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py:1194\u001b[0m, in \u001b[0;36mModule._call_impl\u001b[0;34m(self, *input, **kwargs)\u001b[0m\n\u001b[1;32m   <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1189'>1190</a>\u001b[0m \u001b[39m# If we don't have any hooks, we want to skip the rest of the logic in\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1190'>1191</a>\u001b[0m \u001b[39m# this function, and just call forward.\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1191'>1192</a>\u001b[0m \u001b[39mif\u001b[39;00m \u001b[39mnot\u001b[39;00m (\u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_backward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_hooks \u001b[39mor\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_forward_pre_hooks \u001b[39mor\u001b[39;00m _global_backward_hooks\n\u001b[1;32m   <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1192'>1193</a>\u001b[0m         \u001b[39mor\u001b[39;00m _global_forward_hooks \u001b[39mor\u001b[39;00m _global_forward_pre_hooks):\n\u001b[0;32m-> <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1193'>1194</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m forward_call(\u001b[39m*\u001b[39;49m\u001b[39minput\u001b[39;49m, \u001b[39m*\u001b[39;49m\u001b[39m*\u001b[39;49mkwargs)\n\u001b[1;32m   <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1194'>1195</a>\u001b[0m \u001b[39m# Do not call functions when jit is used\u001b[39;00m\n\u001b[1;32m   <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py?line=1195'>1196</a>\u001b[0m full_backward_hooks, non_full_backward_hooks \u001b[39m=\u001b[39m [], []\n",
+      "File \u001b[0;32m~/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py:171\u001b[0m, in \u001b[0;36mDataParallel.forward\u001b[0;34m(self, *inputs, **kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py?line=168'>169</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodule(\u001b[39m*\u001b[39minputs[\u001b[39m0\u001b[39m], \u001b[39m*\u001b[39m\u001b[39m*\u001b[39mkwargs[\u001b[39m0\u001b[39m])\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py?line=169'>170</a>\u001b[0m replicas \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mreplicate(\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mmodule, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdevice_ids[:\u001b[39mlen\u001b[39m(inputs)])\n\u001b[0;32m--> <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py?line=170'>171</a>\u001b[0m outputs \u001b[39m=\u001b[39m \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mparallel_apply(replicas, inputs, kwargs)\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py?line=171'>172</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mgather(outputs, \u001b[39mself\u001b[39m\u001b[39m.\u001b[39moutput_device)\n",
+      "File \u001b[0;32m~/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py:181\u001b[0m, in \u001b[0;36mDataParallel.parallel_apply\u001b[0;34m(self, replicas, inputs, kwargs)\u001b[0m\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py?line=179'>180</a>\u001b[0m \u001b[39mdef\u001b[39;00m \u001b[39mparallel_apply\u001b[39m(\u001b[39mself\u001b[39m, replicas, inputs, kwargs):\n\u001b[0;32m--> <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/data_parallel.py?line=180'>181</a>\u001b[0m     \u001b[39mreturn\u001b[39;00m parallel_apply(replicas, inputs, kwargs, \u001b[39mself\u001b[39;49m\u001b[39m.\u001b[39;49mdevice_ids[:\u001b[39mlen\u001b[39;49m(replicas)])\n",
+      "File \u001b[0;32m~/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py:89\u001b[0m, in \u001b[0;36mparallel_apply\u001b[0;34m(modules, inputs, kwargs_tup, devices)\u001b[0m\n\u001b[1;32m     <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py?line=86'>87</a>\u001b[0m     output \u001b[39m=\u001b[39m results[i]\n\u001b[1;32m     <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py?line=87'>88</a>\u001b[0m     \u001b[39mif\u001b[39;00m \u001b[39misinstance\u001b[39m(output, ExceptionWrapper):\n\u001b[0;32m---> <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py?line=88'>89</a>\u001b[0m         output\u001b[39m.\u001b[39;49mreraise()\n\u001b[1;32m     <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py?line=89'>90</a>\u001b[0m     outputs\u001b[39m.\u001b[39mappend(output)\n\u001b[1;32m     <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py?line=90'>91</a>\u001b[0m \u001b[39mreturn\u001b[39;00m outputs\n",
+      "File \u001b[0;32m~/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/_utils.py:543\u001b[0m, in \u001b[0;36mExceptionWrapper.reraise\u001b[0;34m(self)\u001b[0m\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/_utils.py?line=538'>539</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mTypeError\u001b[39;00m:\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/_utils.py?line=539'>540</a>\u001b[0m     \u001b[39m# If the exception takes multiple arguments, don't try to\u001b[39;00m\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/_utils.py?line=540'>541</a>\u001b[0m     \u001b[39m# instantiate since we don't know how to\u001b[39;00m\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/_utils.py?line=541'>542</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mRuntimeError\u001b[39;00m(msg) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[0;32m--> <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/_utils.py?line=542'>543</a>\u001b[0m \u001b[39mraise\u001b[39;00m exception\n",
+      "\u001b[0;31mRuntimeError\u001b[0m: Caught RuntimeError in replica 1 on device 1.\nOriginal Traceback (most recent call last):\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/parallel/parallel_apply.py\", line 64, in _worker\n    output = module(*input, **kwargs)\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py\", line 1194, in _call_impl\n    return forward_call(*input, **kwargs)\n  File \"/shareddata/gem_transformer/Shell_repo/Models/EGformer.py\", line 376, in forward\n    ) = self.get_bases(\n  File \"/shareddata/ocp/open-catalyst/ocp/ocpmodels/models/gemnet_oc/gemnet_oc.py\", line 1106, in get_bases\n    basis_rad_main_raw = self.radial_basis(main_graph[\"distance\"])\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py\", line 1194, in _call_impl\n    return forward_call(*input, **kwargs)\n  File \"/shareddata/ocp/open-catalyst/ocp/ocpmodels/models/gemnet_oc/layers/radial_basis.py\", line 231, in forward\n    res = env[:, None] * self.rbf(d_scaled)\n  File \"/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/modules/module.py\", line 1194, in _call_impl\n    return forward_call(*input, **kwargs)\n  File \"/shareddata/ocp/open-catalyst/ocp/ocpmodels/models/gemnet_oc/layers/radial_basis.py\", line 76, in forward\n    dist = dist[:, None] - self.offset[None, :]\nRuntimeError: Expected all tensors to be on the same device, but found at least two devices, cuda:0 and cuda:1!\n"
+     ]
+    }
+   ],
    "source": [
     "best_valid_loss=np.Inf\n",
     "for epoch in range(num_epochs):\n",
@@ -299,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.9.16"
   },
   "orig_nbformat": 4
  },
