--- a/torch_trainer.ipynb
+++ b/torch_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -51,6 +51,67 @@
     "\n",
     "# with open('params/model_hparams.yml', 'w') as file:\n",
     "#     yaml.dump(model_hparams, file)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('params/model_hparams.yml', 'r') as file:\n",
+    "    hyper_config = yaml.load(file, Loader=yaml.FullLoader)\n",
+    "warmup_epochs = hyper_config['configs'].get(\"warmup_epochs\")\n",
+    "decay_epochs = hyper_config['configs'].get(\"decay_epochs\")\n",
+    "y_mean = hyper_config['configs'].get(\"y_mean\")\n",
+    "y_std = hyper_config['configs'].get(\"y_std\")\n",
+    "num_epochs =hyper_config['configs'].get(\"num_epochs\")\n",
+    "batch_size = hyper_config['configs'].get(\"batch_size\")\n",
+    "learning_rate = hyper_config['configs'].get(\"learning_rate\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "warmup_epochs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'batch_size': 4,\n",
+       " 'bond_feat_dim': 0,\n",
+       " 'num_atoms': 0,\n",
+       " 'num_heads': 4,\n",
+       " 'num_targets': 0}"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loaded_model_hparams"
    ]
   },
   {
@@ -268,6 +329,28 @@
     "            total_acc+=acc.item()\n",
     "\n",
     "    return total_loss/len(data_loader),total_acc/len(data_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'LOCAL_RANK'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[1], line 2\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mimport\u001b[39;00m \u001b[38;5;21;01mos\u001b[39;00m\n\u001b[0;32m----> 2\u001b[0m \u001b[38;5;28mint\u001b[39m(\u001b[43mos\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43menviron\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mLOCAL_RANK\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m)\n",
+      "File \u001b[0;32m~/.conda/envs/ocp-models/lib/python3.9/os.py:679\u001b[0m, in \u001b[0;36m_Environ.__getitem__\u001b[0;34m(self, key)\u001b[0m\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/os.py?line=675'>676</a>\u001b[0m     value \u001b[39m=\u001b[39m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39m_data[\u001b[39mself\u001b[39m\u001b[39m.\u001b[39mencodekey(key)]\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/os.py?line=676'>677</a>\u001b[0m \u001b[39mexcept\u001b[39;00m \u001b[39mKeyError\u001b[39;00m:\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/os.py?line=677'>678</a>\u001b[0m     \u001b[39m# raise KeyError with the original key value\u001b[39;00m\n\u001b[0;32m--> <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/os.py?line=678'>679</a>\u001b[0m     \u001b[39mraise\u001b[39;00m \u001b[39mKeyError\u001b[39;00m(key) \u001b[39mfrom\u001b[39;00m \u001b[39mNone\u001b[39;00m\n\u001b[1;32m    <a href='file:///home/xubuntu/.conda/envs/ocp-models/lib/python3.9/os.py?line=679'>680</a>\u001b[0m \u001b[39mreturn\u001b[39;00m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdecodevalue(value)\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'LOCAL_RANK'"
+     ]
+    }
+   ],
+   "source": [
+    "import os\n"
    ]
   },
   {
