--- a/torch_trainer.ipynb
+++ b/torch_trainer.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -55,7 +55,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -116,37 +116,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "WARNING:root:Unrecognized arguments: ['num_heads', 'emb_size_in', 'emb_size_trans', 'out_layer1', 'out_layer2', 'batch_size']\n",
-      "/home/xubuntu/.conda/envs/ocp-models/lib/python3.9/site-packages/torch/nn/init.py:405: UserWarning: Initializing zero-element tensors is a no-op\n",
-      "  warnings.warn(\"Initializing zero-element tensors is a no-op\")\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "with open('params/model_hparams.yml', 'r') as file:\n",
-    "    loaded_model_hparams = yaml.load(file, Loader=yaml.FullLoader)\n",
-    "\n",
+    "    loaded_model_hparams = yaml.load(file, Loader=yaml.FullLoader)['model']\n",
     "# Create the model using the loaded hyperparameters\n",
     "model = EGformer(**loaded_model_hparams)\n",
-    "checkpoint_path='params/gemnet_oc_base_oc20_oc22.pt'\n",
-    "pretrained_state_dict = torch.load(checkpoint_path)['state_dict']\n",
-    "new_model_state_dict = model.state_dict()\n",
-    "filtered_pretrained_state_dict = {k.strip('module.module.'): v for k, v in pretrained_state_dict.items() if k.strip('module.module.') in new_model_state_dict}\n",
-    "new_model_state_dict.update(filtered_pretrained_state_dict)\n",
-    "model.load_state_dict(new_model_state_dict)\n",
-    "for param_name, param in model.named_parameters():\n",
-    "\n",
-    "    if param_name in filtered_pretrained_state_dict.keys():\n",
-    "        \n",
-    "        param.requires_grad = False"
+    "checkpoint_path='params/best_model_all.pt'\n",
+    "pretrained_state_dict = torch.load(checkpoint_path)['MODEL_STATE']\n",
+    "model.load_state_dict(pretrained_state_dict)"
    ]
   },
   {
