--- a/torch_trainer.ipynb
+++ b/torch_trainer.ipynb
@@ -42,17 +42,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 68,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "ERROR:root:Invalid setup for SCN. Either the e3nn library or Jd.pt is missing.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "\"\"\"\n",
     "Copyright (c) Facebook, Inc. and its affiliates.\n",
@@ -311,7 +303,7 @@
     "        emb_size_trans=64,\n",
     "        out_layer1=32,\n",
     "        out_layer2=1,\n",
-    "        batch_size=5,\n",
+    "        num_attn=4,\n",
     "        **kwargs,  # backwards compatibility with deprecated arguments\n",
     "    ):\n",
     "        super().__init__(\n",
@@ -373,21 +365,28 @@
     "                        num_heads=4,\n",
     "                        emb_size_in=256,\n",
     "                        emb_size_trans=64,\n",
-    "                        out_layer1=32,\n",
-    "                        out_layer2=1,\n",
-    "                        batch_size=5                        \n",
+    "                        out_layer1=64,\n",
+    "                        out_layer2=1,                        \n",
+    "                        num_attn=4                        \n",
     "                        )\n",
-    "        self.batch_size=batch_size\n",
-    "        self.num_heads=num_heads        \n",
+    "        \n",
+    "        self.num_heads=num_heads \n",
+    "        self.num_attn=num_attn       \n",
     "        self.out_layer1=out_layer1\n",
     "        self.out_layer2=out_layer2\n",
-    "        self.lin_1=nn.Linear(emb_size_in,emb_size_trans)  \n",
-    "        self.encoder=EncoderLayer(emb_size_trans,4,emb_size_trans)\n",
+    "        self.dense1=nn.Sequential(nn.Linear(emb_size_in,emb_size_trans),\n",
+    "                            nn.SiLU()\n",
+    "                            )\n",
+    "        self.encoder=EncoderLayer(emb_size_trans,8,emb_size_trans)\n",
     "        self.layer_norm = nn.LayerNorm(emb_size_trans)        \n",
-    "        self.dense=nn.Sequential(nn.Linear(emb_size_trans,out_layer1),\n",
+    "        self.dense2E=nn.Sequential(nn.Linear(emb_size_trans*5,out_layer1),\n",
     "                            nn.SiLU(),\n",
     "                            nn.Linear(out_layer1,out_layer2)                                 \n",
-    "                            )\n",
+    "                    )\n",
+    "        self.dense2F=nn.Sequential(nn.Linear(emb_size_trans,out_layer1),\n",
+    "                    nn.SiLU(),\n",
+    "                    nn.Linear(out_layer1,out_layer2)                                 \n",
+    "                    )\n",
     "\n",
     "    def forward(self, data):\n",
     "        pos = data.pos\n",
@@ -439,10 +438,10 @@
     "        m = self.edge_emb(h, basis_rad_raw, main_graph[\"edge_index\"])\n",
     "        # (nEdges, emb_size_edge)\n",
     "        \n",
-    "        x_E, _ = self.out_blocks[0](h, m, basis_output, idx_t)\n",
-    "        # print(x_E.shape)\n",
-    "        # xs_E, _ = [x_E], [x_F]\n",
-    "        xs_E = [x_E]\n",
+    "        x_E, x_F = self.out_blocks[0](h, m, basis_output, idx_t)\n",
+    "        \n",
+    "        xs_E, xs_F = [x_E], [x_F]\n",
+    "       \n",
     "        # (nAtoms, num_targets), (nEdges, num_targets)\n",
     "\n",
     "        for i in range(self.num_blocks):\n",
@@ -466,41 +465,27 @@
     "                quad_idx=quad_idx,\n",
     "            )  # (nAtoms, emb_size_atom), (nEdges, emb_size_edge)\n",
     "\n",
-    "            x_E, _ = self.out_blocks[i + 1](h, m, basis_output, idx_t)\n",
+    "            x_E,x_F= self.out_blocks[i + 1](h, m, basis_output, idx_t)\n",
     "            # (nAtoms, emb_size_atom), (nEdges, emb_size_edge)\n",
     "            xs_E.append(x_E)\n",
-    "            # xs_F.append(x_F)\n",
+    "            xs_F.append(x_F)\n",
     "        # Previous is the Gemnet part, and the following is the Transformer part\n",
-    "        E_t = torch.stack(xs_E, dim=-1)        \n",
-    "          # num_atoms=[]\n",
-    "        if self.batch_size==1:\n",
-    "            E_t = torch.sum(E_t,dim=-1)\n",
-    "            E_t = torch.unsqueeze(E_t, dim=0)\n",
-    "        else:\n",
-    "            num_atoms=[data[j].natoms[0] for j in range(self.batch_size)]\n",
-    "        # for j in range(self.batch_size):\n",
-    "        #         num_atoms.append(data[j].natoms[0])\n",
-    "        # split_indices =(np.cumsum(num_atoms)[:-1])[0]\n",
-    "            E_t = torch.sum(E_t,dim=-1)\n",
-    "            # The shape is N_batch x sum[num_atoms] x 256 \n",
-    "            E_t = torch.split(E_t,num_atoms,dim=0)\n",
-    "        # print('checkpoint2')\n",
-    "            E_t = rnn_utils.pad_sequence(E_t, batch_first=True, padding_value=0)\n",
-    "            # The shape is N_batch  x max_num_atoms x256\n",
-    "        E_t = self.lin_1(E_t)\n",
+    "        E_t = torch.stack(xs_E, dim=-1)\n",
+    "        #(E_t.shape==n_batch x 256 x 5)\n",
+    "        E_t=E_t.permute(0,2,1)\n",
+    "        E_t = self.dense1(E_t)\n",
     "        E_t = self.layer_norm(E_t)\n",
-    "        #The shape is N_batch  x max_num_atoms x64\n",
-    "        E_t,encoder_attention_weights=self.encoder(E_t,mask=None)\n",
-    "        E_t = self.layer_norm(E_t)   \n",
-    "        #print(E_t.shape)         \n",
-    "        #E_t = E_t.permute(1, 0, 2)\n",
-    "        #The shape is N_batch  x max_num_atoms x64\n",
-    "        E_t=self.dense(E_t)        \n",
-    "        #The shape is N_batch  x max_num_atoms x1      \n",
-    "        E_t=torch.sum(E_t,dim=1)\n",
-    "        #The shape is N_batch x1\n",
-    "        E_t=E_t.unsqueeze(dim=-1)\n",
-    "        #print(E_t.shape)\n",
+    "        for _ in range(self.num_attn):             \n",
+    "            E_t, _ = self.encoder(E_t, mask=None)\n",
+    "            E_t = self.layer_norm(E_t)\n",
+    "        E_t=E_t.reshape(E_t.shape[0],-1)\n",
+    "        E_t=self.dense2E(E_t)\n",
+    "        #F_t=self.dense2F(E_t)                  \n",
+    "        #(E_t.shape)=n_atoms*1*1\n",
+    "        nMolecules = torch.max(batch) + 1        \n",
+    "        E_t = scatter_det(\n",
+    "            E_t, batch, dim=0, dim_size=nMolecules, reduce=\"add\"\n",
+    "        )\n",
     "\n",
     "        return E_t"
    ]
@@ -532,7 +517,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -549,7 +534,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -565,14 +550,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "WARNING:root:Unrecognized arguments: ['num_heads', 'emb_size_in', 'emb_size_trans', 'out_layer1', 'out_layer2', 'batch_size']\n"
+      "WARNING:root:Unrecognized arguments: ['num_heads', 'emb_size_in', 'emb_size_trans', 'out_layer1', 'out_layer2', 'num_attn']\n"
      ]
     }
    ],
@@ -584,7 +569,7 @@
     "                \"bond_feat_dim\":0,\n",
     "                \"num_targets\":1,\n",
     "                \"num_heads\":4,\n",
-    "                \"batch_size\":4\n",
+    "                \n",
     "                }\n",
     "model = EGformer(**loaded_model_hparams)\n",
     "checkpoint_path=os.path.join('params', 'gemnet_oc_base_oc20_oc22.pt')\n",
@@ -600,7 +585,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [
     {
@@ -608,7 +593,7 @@
      "output_type": "stream",
      "text": [
       "Freeze params is 238\n",
-      "Need optimiz params is 131\n"
+      "Need optimiz params is 159\n"
      ]
     }
    ],
@@ -625,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 72,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -649,7 +634,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -664,14 +649,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "torch.Size([276])\n"
+      "torch.Size([311])\n"
      ]
     }
    ],
@@ -683,7 +668,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 73,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#test of model\n",
+    "test_input=model(data)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of trainable parameters: 5872834\n"
+     ]
+    }
+   ],
+   "source": [
+    "num_trainable_params = sum(p.numel() for p in model.parameters() if p.requires_grad)\n",
+    "\n",
+    "print(f\"Number of trainable parameters: {num_trainable_params}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[-33.6354],\n",
+       "        [-22.4121],\n",
+       "        [-34.7020],\n",
+       "        [-26.5363]], grad_fn=<ScatterAddBackward0>)"
+      ]
+     },
+     "execution_count": 74,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "test_input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -692,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -707,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -738,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
